fix: added support for multiple bit id to the top stories endpoint
